# EdinaGarbageAlexaSkill

./: .gitignore  README.md  deploy.sh  local-build.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pr.yml
edina_garbage/: handler.py  schedule.py
edina_garbage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
infrastructure/: README.md  main.tf  terraform.tfstate
tests/: test_handler.py  test_schedule.py
